<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_pytest_isolated</name>
  <version>0.1.0</version>
  <description>Adds ability to add pytests isolated with ROS_DOMAIN_ID</description>
  <maintainer email="pete.baughman@apex.ai">Pete Baughman</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>domain_coordinator</depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_pytest</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
